--- a/purecss/custom/layouts/layout-2/index.html
+++ b/purecss/custom/layouts/layout-2/index.html
@@ -4,13 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>purecss.io</title>
-		<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
-	    <!--[if lte IE 8]>
-	        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-old-ie-min.css">
-	    <![endif]-->
-	    <!--[if gt IE 8]><!-->
-	        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
-	    <!--<![endif]-->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/stickyfooter.css">
 		<link rel="stylesheet" href="css/layout.css">
 	</head>
